--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -22,9 +22,9 @@ steps:
     args: [
         "run",
         "deploy",
-        "$PROJECT_ID", # We are naming the cloudrun service the same as our project id
+        "dev1-249203", # We are naming the cloudrun service the same as our project id
         "--image",
-        "gcr.io/$PROJECT_ID/my_app:latest",
+        "gcr.io/dev1-249203/my_app:latest",
         "--no-traffic",
         "--region",
         "australia-southeast1",
